# kDbLogger

./: pyproject.toml  readme.md
src/kDbLogger/: connection_string.py  crud.py  models.py
